# EDRH-2.0

./: README.md
EDRH_m/: CMakeLists.txt  build_release.bat  claimmanager.cpp  config.json  configmanager.cpp  configmanager.h  edrhcontroller.cpp  edrhcontroller.h  exceptionmanager.cpp  exceptionmanager.h  galaxymaprenderer.cpp  imageloader.cpp  imageloader.h  journalmonitor.cpp  journalmonitor.h  main.cpp  supabaseclient.cpp  supabaseclient.h
EDRH_m/qml/: GalaxyActionsCard.qml  GalaxyMapTab.qml  GalaxyMapWindow.qml  HighPerformanceGalaxyMapTab.qml  NearestUnclaimedCard.qml  QuickActionsCard.qml  SplashScreen.qml  SystemCard.qml  SystemViewPopup.qml  SystemViewPopup_Original.qml  main.qml
